--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,113 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="NbY-RS-Qxk">
+                                <rect key="frame" x="0.0" y="99" width="600" height="501"/>
+                                <animations/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pD9-hj-wIT">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                <animations/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="KgE-lA-GDN"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" ambiguous="YES" misplaced="YES" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Tzc-f9-jMR">
+                                <rect key="frame" x="0.0" y="55" width="600" height="44"/>
+                                <animations/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5jM-Bs-piD">
+                                <rect key="frame" x="20" y="119" width="560" height="461"/>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WxY-8v-ZXf">
+                                    <size key="itemSize" width="110" height="110"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="sHF-vd-YGH" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="297" translatesAutoresizingMaskIntoConstraints="NO" id="vVK-nb-Ney">
+                                                    <rect key="frame" x="0.0" y="0.0" width="110" height="87"/>
+                                                    <animations/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g56-5e-OgU">
+                                                    <rect key="frame" x="0.0" y="87" width="110" height="23"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="23" id="YkX-3A-uQ1"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <animations/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.69776400862068966" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="g56-5e-OgU" secondAttribute="bottom" id="8KF-jV-4Tt"/>
+                                            <constraint firstAttribute="trailing" secondItem="vVK-nb-Ney" secondAttribute="trailing" id="QHj-tP-gW1"/>
+                                            <constraint firstItem="vVK-nb-Ney" firstAttribute="leading" secondItem="sHF-vd-YGH" secondAttribute="leading" id="RVd-Xi-j3D"/>
+                                            <constraint firstItem="vVK-nb-Ney" firstAttribute="top" secondItem="sHF-vd-YGH" secondAttribute="top" id="VIM-6q-fns"/>
+                                            <constraint firstItem="g56-5e-OgU" firstAttribute="top" secondItem="vVK-nb-Ney" secondAttribute="bottom" id="aFB-VZ-g4m"/>
+                                            <constraint firstAttribute="trailing" secondItem="g56-5e-OgU" secondAttribute="trailing" id="npR-cC-vby"/>
+                                            <constraint firstItem="g56-5e-OgU" firstAttribute="leading" secondItem="sHF-vd-YGH" secondAttribute="leading" id="wxG-7x-3DP"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="g56-5e-OgU" id="b0H-Bm-JTX"/>
+                                            <outlet property="thumbImg" destination="vVK-nb-Ney" id="c6K-1m-4pc"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="pD9-hj-wIT" secondAttribute="trailing" id="A0X-y2-KHr"/>
+                            <constraint firstItem="NbY-RS-Qxk" firstAttribute="top" secondItem="Tzc-f9-jMR" secondAttribute="bottom" id="AAl-gz-jHW"/>
+                            <constraint firstItem="5jM-Bs-piD" firstAttribute="top" secondItem="Tzc-f9-jMR" secondAttribute="bottom" constant="20" id="AXl-J5-2ea"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="NbY-RS-Qxk" secondAttribute="bottom" id="BqS-pH-9oC"/>
+                            <constraint firstItem="NbY-RS-Qxk" firstAttribute="top" secondItem="pD9-hj-wIT" secondAttribute="bottom" id="Bzp-eH-uvo"/>
+                            <constraint firstItem="Tzc-f9-jMR" firstAttribute="top" secondItem="pD9-hj-wIT" secondAttribute="bottom" id="HLN-3Y-QHE"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5jM-Bs-piD" secondAttribute="bottom" constant="20" id="Ld1-vt-jwH"/>
+                            <constraint firstItem="Tzc-f9-jMR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="St6-f8-FM8"/>
+                            <constraint firstItem="pD9-hj-wIT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WEE-9X-81C"/>
+                            <constraint firstAttribute="trailing" secondItem="Tzc-f9-jMR" secondAttribute="trailing" id="eWH-tO-wTy"/>
+                            <constraint firstItem="5jM-Bs-piD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="f9c-Q7-SVk"/>
+                            <constraint firstItem="pD9-hj-wIT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gYV-sq-9U0"/>
+                            <constraint firstItem="NbY-RS-Qxk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="l09-Qb-Kzs"/>
+                            <constraint firstItem="5jM-Bs-piD" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="wdp-3d-6oU"/>
+                            <constraint firstAttribute="trailing" secondItem="NbY-RS-Qxk" secondAttribute="trailing" id="zgu-qq-Xta"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Bzp-eH-uvo"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="317"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="297" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
